--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "makefiles"]
 	path = makefiles
-	url = git@github.com:rainhq/makefiles.git
+	url = git@github.com:f1gopher/makefiles.git
